--- a/.pypirc
+++ b/.pypirc
@@ -4,9 +4,9 @@ index-servers=pypi
 [pypi]
 repository: https://upload.pypi.org/legacy/ 
 username: dadmatech
-password: <your password>
+password: DadmaPypI@02!
 
 [testpypi]
 repository: https://test.pypi.org/legacy/
 username: dadmatech
-password: <your password>
+password: DadmaPypI@02!
