--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,42 @@
 aadict==0.2.3
 alabaster==0.7.12
-allennlp==0.9.0
 asset==0.6.13
 attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
 blis==0.7.4
-boto3==1.10.45
-botocore==1.13.50
 bpemb==0.3.3
 catalogue==2.0.6
-certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.3
-click==7.1.2
 cloudpickle==1.6.0
 conllu==1.3.1
 cryptography==3.4.7
-cycler==0.10.0
 cymem==2.0.5
 decorator==5.0.9
 Deprecated==1.2.6
 docutils==0.15.2
-editdistance==0.5.3
 filelock==3.0.12
-flaky==3.7.0
 Flask==2.0.1
-Flask-Cors==3.0.10
-ftfy==6.0.3
 future==0.18.2
 gdown==3.12.2
 gensim==3.8.1
-gevent==21.1.2
 globre==0.1.5
-greenlet==1.1.0
-h5py==3.3.0
 hazm==0.7.0
 huggingface-hub==0.0.12
 hyperopt==0.2.5
-idna==3.2
 imagesize==1.2.0
 importlib-metadata==3.10.1
 iniconfig==1.1.1
 ipython==7.12.0
 ipython-genutils==0.2.0
-itsdangerous==2.0.1
 Janome==0.4.1
 jedi==0.18.0
-Jinja2==3.0.1
-jmespath==0.10.0
 joblib==1.0.1
-jsonnet==0.17.0
-jsonpickle==2.0.0
-kiwisolver==1.3.1
 konoha==4.6.5
 langdetect==1.0.9
 libwapiti==0.2.1
 lxml==4.6.3
-MarkupSafe==2.0.1
-matplotlib==3.4.2
-matplotlib-inline==0.1.2
 mock==4.0.1
 mpld3==0.3
 murmurhash==1.0.5
@@ -68,7 +45,6 @@ NERDA==1.0.0
 networkx==2.6.2
 nltk==3.3
 numpy==1.19.5
-numpydoc==1.1.0
 overrides==3.1.0
 packaging==21.0
 pandas==1.3.3
@@ -77,7 +53,6 @@ parso==0.8.2
 pathy==0.6.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.3.1
 plac==0.9.6
 pluggy==0.13.1
 preshed==3.0.5
@@ -90,15 +65,14 @@ pyasn1==0.1.8
 pyconll==3.1.0
 pycparser==2.20
 pydantic==1.7.4
-Pygments==2.9.0
 pyhocon==0.3.56
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
 PySocks==1.7.1
 pytest==6.2.4
-python-dateutil==2.8.2
-pytorch-pretrained-bert==0.6.2
-pytorch-transformers==1.1.0
+#python-dateutil==2.8.2
+#pytorch-pretrained-bert==0.6.2
+#pytorch-transformers==1.1.0
 pytz==2021.1
 PyYAML==5.2
 regex==2021.7.6
@@ -110,19 +84,11 @@ scikit-learn==0.24.2
 scipy==1.7.0
 segtok==1.5.7
 sentencepiece==0.1.95
-six==1.16.0
 sklearn==0.0
 smart-open==5.1.0
-snowballstemmer==2.1.0
 spacy==3.0.0
 spacy-legacy==3.0.8
 Sphinx==4.1.2
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
 sqlitedict==1.7.0
 sqlparse==0.4.1
 srsly==2.4.1
@@ -132,7 +98,8 @@ thinc==8.0.10
 threadpoolctl==2.2.0
 tokenizers==0.10.3
 toml==0.10.2
-torch==1.7.1+cu110
+#torch==1.7.1+cu110
+torch==1.7.1
 tqdm==4.61.2
 traitlets==5.0.5
 transformers==4.9.1
@@ -142,10 +109,6 @@ typing-utils==0.1.0
 Unidecode==1.2.0
 urllib3==1.25.11
 wasabi==0.8.2
-wcwidth==0.2.5
-Werkzeug==2.0.1
 word2number==1.1
 wrapt==1.12.1
 zipp==3.5.0
-zope.event==4.5.0
-zope.interface==5.4.0
