--- a/requirements.txt
+++ b/requirements.txt
@@ -1,114 +1,20 @@
-aadict==0.2.3
-alabaster==0.7.12
-asset==0.6.13
-attrs==21.2.0
-Babel==2.9.1
-backcall==0.2.0
-blis==0.7.4
 bpemb==0.3.3
-catalogue==2.0.6
-cffi==1.14.6
-charset-normalizer==2.0.3
-cloudpickle==1.6.0
-conllu==1.3.1
-cryptography==3.4.7
-cymem==2.0.5
-decorator==5.0.9
-Deprecated==1.2.6
-docutils==0.15.2
-filelock==3.0.12
-Flask==2.0.1
-future==0.18.2
-gdown==3.12.2
-gensim==3.8.1
-globre==0.1.5
-hazm==0.7.0
-huggingface-hub==0.0.12
-hyperopt==0.2.5
-imagesize==1.2.0
-importlib-metadata==3.10.1
-iniconfig==1.1.1
-ipython==7.12.0
-ipython-genutils==0.2.0
-Janome==0.4.1
-jedi==0.18.0
-joblib==1.0.1
-konoha==4.6.5
-langdetect==1.0.9
-libwapiti==0.2.1
-lxml==4.6.3
-mock==4.0.1
-mpld3==0.3
-murmurhash==1.0.5
-ndg-httpsclient==0.5.1
-NERDA==1.0.0
-networkx==2.6.2
-nltk==3.3
-numpy==1.19.5
-overrides==3.1.0
-packaging==21.0
-pandas==1.3.3
-parsimonious==0.8.1
-parso==0.8.2
-pathy==0.6.0
-pexpect==4.8.0
-pickleshare==0.7.5
-plac==0.9.6
-pluggy==0.13.1
-preshed==3.0.5
-progressbar==2.5
-prompt-toolkit==3.0.19
-protobuf==3.17.3
-ptyprocess==0.7.0
-py==1.10.0
-pyasn1==0.1.8
-pyconll==3.1.0
-pycparser==2.20
-pydantic==1.7.4
-pyhocon==0.3.56
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-PySocks==1.7.1
-pytest==6.2.4
-#python-dateutil==2.8.2
-#pytorch-pretrained-bert==0.6.2
-#pytorch-transformers==1.1.0
-pytz==2021.1
-PyYAML==5.2
-regex==2021.7.6
-requests==2.26.0
-responses==0.13.3
-s3transfer==0.2.1
-sacremoses==0.0.45
-scikit-learn==0.24.2
-scipy==1.7.0
-segtok==1.5.7
-sentencepiece==0.1.95
-sklearn==0.0
-smart-open==5.1.0
 spacy==3.0.0
-spacy-legacy==3.0.8
-Sphinx==4.1.2
-sqlitedict==1.7.0
-sqlparse==0.4.1
-srsly==2.4.1
-tabulate==0.8.6
-tensorboardX==2.4
-thinc==8.0.10
-threadpoolctl==2.2.0
-tokenizers==0.10.3
-toml==0.10.2
-#torch==1.7.1+cu110
+sklearn==0.0
 torch==1.7.1
-tqdm==4.61.2
-traitlets==5.0.5
 transformers==4.9.1
-typer==0.3.2
-typing-extensions==3.10.0.0
+ipython==7.12.0
+h5py==3.3.0
+Deprecated==1.2.6
+hyperopt==0.2.5
+langdetect==1.0.9
+matplotlib-inline==0.1.2
+mpld3==0.3
+pyconll==3.1.0
+pyhocon==0.3.56
+pytorch-transformers==1.1.0
+segtok==1.5.7
+sqlitedict==1.7.0
+tabulate==0.8.6
 typing-utils==0.1.0
-Unidecode==1.2.0
-urllib3==1.25.11
-wasabi==0.8.2
-word2number==1.1
-wrapt==1.12.1
-zipp==3.5.0
+supar==1.1.2
