--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,13 @@
-bpemb==0.3.3
-spacy==3.0.0
-sklearn==0.0
-torch==1.7.1
-transformers==4.9.1
-ipython==7.12.0
-h5py==3.3.0
+bpemb>=0.3.3
 Deprecated==1.2.6
-hyperopt==0.2.5
-langdetect==1.0.9
-matplotlib-inline==0.1.2
-mpld3==0.3
-pyconll==3.1.0
-pyhocon==0.3.56
-pytorch-transformers==1.1.0
+h5py>=3.3.0
+hyperopt>=0.2.5
+pyconll>=3.1.0
+pytorch-transformers>=1.1.0
+spacy==3.0.0
+sklearn>=0.0
 segtok==1.5.7
-sqlitedict==1.7.0
-tabulate==0.8.6
-typing-utils==0.1.0
-supar==1.1.2
+supar>=1.1.2
+torch>=1.7.1
+transformers==4.9.1
+tabulate>=0.8.6
