--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ bpemb>=0.3.3
 Deprecated==1.2.6
 h5py>=3.3.0
 hyperopt>=0.2.5
-pyconll>=3.1.0
 pytorch-transformers>=1.1.0
 spacy==3.0.0
 scikit-learn
@@ -14,8 +13,34 @@ tabulate>=0.8.6
 html2text==2020.1.16
 gensim>=3.6.0
 fasttext==0.9.2
-wiki-dump-reader==0.0.4
 gdown==4.2.0
-conllu==4.4.1
 py7zr==0.17.2
-NERDA
+allennlp==0.9.0
+boto3==1.10.45
+botocore==1.13.50
+future==0.18.2
+huggingface-hub==0.0.12
+importlib-metadata==3.10.1
+ipython==7.12.0
+ipython-genutils==0.2.0
+langdetect==1.0.9
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
+mpld3==0.3
+ndg-httpsclient==0.5.1
+nltk==3.6.2
+numpy==1.19.5
+pandas==1.3.3
+pyhocon==0.3.56
+pyOpenSSL==20.0.1
+pytorch-pretrained-bert==0.6.2
+requests==2.26.0
+scipy==1.7.0
+sqlitedict==1.7.0
+tokenizers==0.10.3
+tqdm==4.61.2
+
+sphinx==3.1.2
+sphinx_rtd_theme==0.5.0
+sphinx_markdown_tables==0.0.15
+sphinx_markdown_parser==0.2.4
