--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ py7zr>=0.17.2
 html2text
 tf-estimator-nightly==2.8.0.dev2021122109
 scikit-learn>=0.24.2
-numpy
+numpy>=1.24.3
 protobuf
 requests
 tqdm>=4.27
