--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ py7zr>=0.17.2
 html2text
 tf-estimator-nightly==2.8.0.dev2021122109
 scikit-learn>=0.24.2
-numpy>=1.24.3
+numpy
 protobuf
 requests
 tqdm>=4.27
@@ -30,6 +30,5 @@ regex != 2019.12.17
 packaging
 sentencepiece
 sacremoses
-pandas
-hazm
+fasttext
 kenlm
