fix libraries versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,33 @@
-bpemb>=0.3.3
-nltk
-folium>=0.2.1
-spacy>=3.0.0
-torch>=2.3.1
-transformers>=4.9.1
-h5py>=3.3.0
-Deprecated==1.2.6
-hyperopt>=0.2.5
-pyconll>=3.1.0
-pytorch-transformers>=1.1.0
-segtok>=1.5.7
-tabulate>=0.8.6
-supar==1.1.2
-gensim>=3.6.0
-conllu
-gdown>=4.3.1
-py7zr>=0.17.2
-html2text
+torch==1.11.0
+transformers==4.47.1
+pytorch-transformers==1.2.0
 tf-estimator-nightly==2.8.0.dev2021122109
-scikit-learn>=0.24.2
-numpy
-protobuf
-requests
-tqdm>=4.27
+supar==1.1.2
+bpemb==0.3.6
+nltk==3.9.1
+folium==0.19.3
+h5py==3.12.1
+Deprecated==1.2.6
+hyperopt==0.2.7
+pyconll==3.2.0
+segtok>=1.5.7
+tabulate==0.9.0
+gensim==4.3.3
+conllu==6.0.0
+gdown==5.2.0
+py7zr==0.22.0
+html2text==2024.2.26
+scikit-learn==1.6.0
+numpy==1.26.4
+protobuf==5.29.2
+requests==2.32.3
+tqdm==4.67.1
 langid==1.1.6
-filelock
-tokenizers>=0.7.0
-regex != 2019.12.17
-packaging
-sentencepiece
-sacremoses
-fasttext
-kenlm
+filelock==3.16.1
+tokenizers==0.21.0
+regex==2024.11.6
+packaging==24.2
+sentencepiece==0.2.0
+sacremoses==0.1.1
 emoji==2.10.0
-pandas
+pandas==2.2.3
