--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,107 @@
-torch==1.11.0
-transformers==4.47.1
-pytorch-transformers==1.2.0
-tf-estimator-nightly==2.8.0.dev2021122109
-supar==1.1.2
+asttokens==2.2.1
+backcall==0.2.0
+beautifulsoup4==4.13.4
 bpemb==0.3.6
-nltk==3.9.1
-folium==0.19.3
-h5py==3.12.1
-Deprecated==1.2.6
-hyperopt==0.2.7
-pyconll==3.2.0
-segtok>=1.5.7
-tabulate==0.9.0
-gensim==4.3.3
+branca==0.8.1
+Brotli==1.1.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.1.8
+cloudpickle==3.1.1
+cmake==4.0.0
+colorama==0.4.6
+comm==0.1.2
 conllu==6.0.0
+debugpy==1.6.6
+decorator==5.1.1
+Deprecated==1.2.18
+dill==0.4.0
+emoji==2.14.1
+executing==1.2.0
+filelock==3.18.0
+folium==0.19.5
+fsspec==2025.3.2
+future==1.0.0
 gdown==5.2.0
-py7zr==0.22.0
-html2text==2024.2.26
-scikit-learn==1.6.0
-numpy==1.26.4
-protobuf==5.29.2
-requests==2.32.3
-tqdm==4.67.1
+gensim==4.3.3
+h5py==3.13.0
+html2text==2025.4.15
+huggingface-hub==0.30.2
+hyperopt==0.2.7
+idna==3.10
+inflate64==1.0.1
+ipykernel==6.21.3
+ipython==8.11.0
+ipython_pygments_lexers==1.1.1
+jedi==0.18.2
+Jinja2==3.1.6
+joblib==1.5.0
+jupyter_client==8.0.3
+jupyter_core==5.2.0
 langid==1.1.6
-filelock==3.16.1
-tokenizers==0.21.0
-regex==2024.11.6
-packaging==24.2
-sentencepiece==0.2.0
-sacremoses==0.1.1
-emoji==2.10.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.6
+mpmath==1.3.0
+multivolumefile==0.2.3
+nest-asyncio==1.5.6
+networkx==3.4.2
+nltk==3.9.1
+numpy==1.26.4
+packaging==25.0
 pandas==2.2.3
+parso==0.8.3
+pickleshare==0.7.5
+pip==25.1.1
+pip-check==3.1
+platformdirs==3.1.1
+prompt-toolkit==3.0.38
+protobuf==6.30.2
+psutil==5.9.4
+pure-eval==0.2.2
+py4j==0.10.9.9
+py7zr==0.22.0
+pybcj==1.0.3
+pyconll==3.2.0
+pycryptodomex==3.22.0
+Pygments==2.14.0
+pyppmd==1.1.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2025.2
+pywin32==310
+PyYAML==6.0.2
+pyzmq==26.4.0
+pyzstd==0.16.2
+regex==2024.11.6
+requests==2.32.3
+sacremoses==0.1.1
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.13.1
+segtok==1.5.11
+sentencepiece==0.2.0
+setuptools==78.1.1
+six==1.16.0
+smart_open==7.1.0
+soupsieve==2.7
+stack-data==0.6.2
+stanza==1.10.1
+supar==1.1.4
+sympy==1.14.0
+tabulate==0.9.0
+terminaltables==3.1.10
+texttable==1.7.0
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.7.0
+tornado==6.2
+tqdm==4.67.1
+traitlets==5.9.0
+transformers==4.51.3
+typing_extensions==4.12.2
+tzdata==2025.2
+urllib3==2.4.0
+wcwidth==0.2.5
+wheel==0.45.1
+wrapt==1.17.2
+xyzservices==2025.4.0
