--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ click==8.2.1
 colorama==0.4.6
 conllu==6.0.0
 filelock==3.18.0
-fsspec==2025.5.0
+fsspec>=2025.3.2,<2025.5.1
 html2text==2025.4.15
 huggingface-hub==0.31.4
 idna==3.10
@@ -19,10 +19,10 @@ mpmath==1.3.0
 multivolumefile==0.2.3
 networkx==3.4.2
 numpy==1.26.4
-packaging==25.0
-pandas==2.2.3
+packaging>=23.2,<25.0
+pandas>=2.2.0,<2.2.3
 pillow==11.2.1
-protobuf==6.31.0
+protobuf>=5.29.1,<6.0.0
 psutil==7.0.0
 py7zr==0.22.0
 pybcj==1.0.6
@@ -45,7 +45,7 @@ sympy==1.14.0
 texttable==1.7.0
 threadpoolctl==3.6.0
 tokenizers==0.21.1
-torch==2.3.0
+torch>=2.1.0,<2.6.0
 tqdm==4.67.1
 transformers==4.51.3
 typing_extensions==4.13.2
@@ -55,3 +55,4 @@ torchtext==0.18.0
 gensim==4.3.3
 emoji==1.7.0
 gdown==5.2.0
+tsfresh==0.20.0
