--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ MarkupSafe==3.0.2
 mpmath==1.3.0
 multivolumefile==0.2.3
 networkx==3.4.2
-numpy==1.26.4
+numpy==1.26.0
 packaging>=23.2,<25.0
 pandas>=2.2.0,<2.2.3
 pillow==11.2.1
@@ -41,11 +41,11 @@ scipy==1.13.0
 sentence-transformers==4.1.0
 sentencepiece==0.2.0
 six==1.17.0
-sympy==1.14.0
+sympy==1.13.1
 texttable==1.7.0
 threadpoolctl==3.6.0
 tokenizers==0.21.1
-torch>=2.1.0,<2.6.0
+torch==2.6.0
 tqdm==4.67.1
 transformers==4.51.3
 typing_extensions==4.13.2
